--- a/ERP/src/classes/GUI.form
+++ b/ERP/src/classes/GUI.form
@@ -331,7 +331,9 @@
                   <Component id="jButtonShowEmail" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButtonDeleteEmail" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="497" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jButtonMailAnswer" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="416" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -343,6 +345,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButtonDeleteEmail" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButtonShowEmail" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonMailAnswer" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="39" max="32767" attributes="0"/>
               </Group>
@@ -382,6 +385,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonShowEmailActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButtonMailAnswer">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Odpisz"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonMailAnswerActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
