--- a/ERP/src/classes/GUI.form
+++ b/ERP/src/classes/GUI.form
@@ -390,6 +390,7 @@
         <Component class="javax.swing.JButton" name="jButtonMailAnswer">
           <Properties>
             <Property name="text" type="java.lang.String" value="Odpisz"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonMailAnswerActionPerformed"/>
